Add locking to ClientDiscardableTextureManager and ClientTransferCache

ClientDiscardableTextureManager and ClientTransferCache are called from ContextSupport without the context lock held. We need locking in these cases to prevent data races which are currently possible.

Bug: 794293
Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I70c5a23dc2bd55cb77fb29c3c9057e8c37211e8c