gpu/command_buffer/client/client_discardable_texture_manager.cc
@@ -13,6 +13,7 @@ ClientDiscardableTextureManager::~ClientDiscardableTextureManager() = default;
 ClientDiscardableHandle ClientDiscardableTextureManager::InitializeTexture(
     CommandBuffer* command_buffer,
     uint32_t texture_id) {
+  base::AutoLock hold(lock_);
   DCHECK(texture_id_to_handle_id_.find(texture_id) ==
          texture_id_to_handle_id_.end());
   ClientDiscardableHandle::Id handle_id =
@@ -25,12 +26,14 @@ ClientDiscardableHandle ClientDiscardableTextureManager::InitializeTexture(
 }
 
 bool ClientDiscardableTextureManager::LockTexture(uint32_t texture_id) {
+  base::AutoLock hold(lock_);
   auto found = texture_id_to_handle_id_.find(texture_id);
   DCHECK(found != texture_id_to_handle_id_.end());
   return discardable_manager_.LockHandle(found->second);
 }
 
 void ClientDiscardableTextureManager::FreeTexture(uint32_t texture_id) {
+  base::AutoLock hold(lock_);
   auto found = texture_id_to_handle_id_.find(texture_id);
   if (found == texture_id_to_handle_id_.end())
     return;
@@ -41,12 +44,14 @@ void ClientDiscardableTextureManager::FreeTexture(uint32_t texture_id) {
 
 bool ClientDiscardableTextureManager::TextureIsValid(
     uint32_t texture_id) const {
+  base::AutoLock hold(lock_);
   return texture_id_to_handle_id_.find(texture_id) !=
          texture_id_to_handle_id_.end();
 }
 
 ClientDiscardableHandle ClientDiscardableTextureManager::GetHandleForTesting(
     uint32_t texture_id) {
+  base::AutoLock hold(lock_);
   auto found = texture_id_to_handle_id_.find(texture_id);
   DCHECK(found != texture_id_to_handle_id_.end());
   return discardable_manager_.GetHandle(found->second);
